replay button and reseting game

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,10 @@
     </div>
   
     <div id="game-phase" style="display:none">
+      <div id="game-over" class="hidden">
+        <p id="game-over-message"></p>
+        <button id="replay-btn">Replay</button>
+      </div>
       <div id="game">
         <div class="board-container">
           <h2>Your Board</h2>
